-------------------- 17.9.304  Release [15-September-2017] --------------------

15-September-2017
  # keep id (build 304)

17-August-2017
  # "%uXXXX" (build 303)

----------------------- 17.7.302 Release [26-July-2017] -----------------------

26-July-2017
  ^ changed j2xml file format 17.7.0 (build 302)
  + content.canonical (build 302)

19-July-2017
  ^ version (build 301)

18-July-2017
  # minor bugs (build 300)
  # default category (build 300)

15-June-2017
  + fields (build 299)

26-April-2017
  # JRequest deprecated (build 298)

--------------------- 17.2.297 Release [2-February-2017] ----------------------

2-February-2017
  # sender (build 297)

28-January-2016
  + export modules (build 296)
  + import menus (build 295)
  + export menus (build 294)

25-January-2016
  + link source file (build 293)
  + backlink (build 293)
  + filename (build 293)

13-January-2016
  + client side xsl transformation (build 292) 
  # sender (build 291)
  $ LIB_J2XML_XMLRPC_DISABLED (build 291)
  # import tag (build 290)
  + export contacts (build 289)
  # import category (build 289)

29-November-2016
  + import Ajax (build 288)
  # import (build 287)

--------------------- 16.10.286 Release [31-October-2016] ---------------------

31-October-2016
  ^ debug (build 286)

-------------------- 16.9.285 Release  [19-September-2016] --------------------

19-September-2016
  # import user (build 284, 285)

---------------------- 16.7.283 Release  [28-July-2016] ----------------------

28-July-2016
  # import user groups (build 283)

----------------------- 16.7.282 Release [6-July-2016] -----------------------

6-July-2016
  # publish_up (build 282)
  # publish_down (build 282)
  # created (build 282)
  # modified (build 282)

----------------------- 16.5.281 Release  [31-May-2016] -----------------------

31-May-2016
  # send (build 281)

----------------------- 16.5.279 Release  [22-May-2016] -----------------------

21-May-2016
  # usergroup null (build 279)