@@ -1,6 +1,6 @@
 <?php
 /**
- * @version		17.9.304 libraries/eshiol/j2xml/version.php
+ * @version		17.10.305 libraries/eshiol/j2xml/version.php
  * @package		J2XML
  * @subpackage	lib_j2xml
  * @since		1.5.3
@@ -25,11 +25,11 @@ class J2XMLVersion
 	/** @public static int Main Release Level */
 	public static $RELEASE	= '17';
 	/** @public static int Sub Release Level */
-	public static $DEV_LEVEL	= '9';
+	public static $DEV_LEVEL	= '10';
 	/** @public static string Development Status */
 	public static $DEV_STATUS	= ''; //dev < alpha = a < beta = b < RC = rc < # < pl = p
 	/** @public static int build Number */
-	public static $BUILD		= '304';
+	public static $BUILD		= '305';
 	/** @public static string Codename */
 	public static $CODENAME	= ' ';
 	/** @public static string Copyright Text */
