@@ -1,3 +1,8 @@
+--------------------- 17.10.305 Release [11-October-2017] ---------------------
+
+11-October-2017
+  # tags (build 305)
+
 -------------------- 17.9.304  Release [15-September-2017] --------------------
 
 15-September-2017
